regression/fail/modules.46.sml
signature S =
   sig
      exception it
   end
